@@ -90,7 +90,7 @@ class Struct:
             self.PrintIndented(file, '  ', dcl)
         print >>file, ''
         for entry in self._entries:
-            print >>file, '  uint8_t %s_set;' % entry.Name()
+            print >>file, '  ev_uint8_t %s_set;' % entry.Name()
         print >>file, '};\n'
 
         print >>file, \
@@ -100,9 +100,9 @@ void %(name)s_clear(struct %(name)s *);
 void %(name)s_marshal(struct evbuffer *, const struct %(name)s *);
 int %(name)s_unmarshal(struct %(name)s *, struct evbuffer *);
 int %(name)s_complete(struct %(name)s *);
-void evtag_marshal_%(name)s(struct evbuffer *, uint32_t, 
+void evtag_marshal_%(name)s(struct evbuffer *, ev_uint32_t, 
     const struct %(name)s *);
-int evtag_unmarshal_%(name)s(struct evbuffer *, uint32_t,
+int evtag_unmarshal_%(name)s(struct evbuffer *, ev_uint32_t,
     struct %(name)s *);""" % { 'name' : self._name }
 
 
@@ -214,7 +214,7 @@ int evtag_unmarshal_%(name)s(struct evbuffer *, uint32_t,
                        '%(name)s_unmarshal(struct %(name)s *tmp, '
                        ' struct evbuffer *evbuf)\n'
                        '{\n'
-                       '  uint32_t tag;\n'
+                       '  ev_uint32_t tag;\n'
                        '  while (EVBUFFER_LENGTH(evbuf) > 0) {\n'
                        '    if (evtag_peek(evbuf, &tag) == -1)\n'
                        '      return (-1);\n'
@@ -275,9 +275,9 @@ int evtag_unmarshal_%(name)s(struct evbuffer *, uint32_t,
         print >>file, (
             'int\n'
             'evtag_unmarshal_%(name)s(struct evbuffer *evbuf, '
-            'uint32_t need_tag, struct %(name)s *msg)\n'
+            'ev_uint32_t need_tag, struct %(name)s *msg)\n'
             '{\n'
-            '  uint32_t tag;\n'
+            '  ev_uint32_t tag;\n'
             '  int res = -1;\n'
             '\n'
             '  struct evbuffer *tmp = evbuffer_new();\n'
@@ -299,7 +299,7 @@ int evtag_unmarshal_%(name)s(struct evbuffer *, uint32_t,
         # Complete message marshaling
         print >>file, (
             'void\n'
-            'evtag_marshal_%(name)s(struct evbuffer *evbuf, uint32_t tag, '
+            'evtag_marshal_%(name)s(struct evbuffer *evbuf, ev_uint32_t tag, '
             'const struct %(name)s *msg)\n'
             '{\n'
             '  struct evbuffer *_buf = evbuffer_new();\n'
@@ -476,7 +476,7 @@ class EntryBytes(Entry):
         Entry.__init__(self, type, name, tag)
 
         self._length = length
-        self._ctype = 'uint8_t'
+        self._ctype = 'ev_uint8_t'
 
     def GetInitializer(self):
         return "NULL"
@@ -499,7 +499,7 @@ class EntryBytes(Entry):
         return code
         
     def Declaration(self):
-        dcl  = ['uint8_t %s_data[%s];' % (self._name, self._length)]
+        dcl  = ['ev_uint8_t %s_data[%s];' % (self._name, self._length)]
         
         return dcl
 
@@ -576,7 +576,7 @@ class EntryInt(Entry):
         Entry.__init__(self, type, name, tag)
 
         self._can_be_array = 1
-        self._ctype = 'uint32_t'
+        self._ctype = 'ev_uint32_t'
 
     def GetInitializer(self):
         return "0"        
@@ -610,7 +610,7 @@ class EntryInt(Entry):
         return code
 
     def Declaration(self):
-        dcl  = ['uint32_t %s_data;' % self._name]
+        dcl  = ['ev_uint32_t %s_data;' % self._name]
 
         return dcl
 
@@ -904,7 +904,7 @@ class EntryVarBytes(Entry):
         # Init base class
         Entry.__init__(self, type, name, tag)
 
-        self._ctype = 'uint8_t *'
+        self._ctype = 'ev_uint8_t *'
 
     def GetInitializer(self):
         return "NULL"    
@@ -917,12 +917,12 @@ class EntryVarBytes(Entry):
         return [ '%(varname)s = NULL;' % { 'varname' : varname } ]
 
     def GetDeclaration(self, funcname):
-        code = [ 'int %s(struct %s *, %s *, uint32_t *);' % (
+        code = [ 'int %s(struct %s *, %s *, ev_uint32_t *);' % (
             funcname, self._struct.Name(), self._ctype ) ]
         return code
         
     def AssignDeclaration(self, funcname):
-        code = [ 'int %s(struct %s *, const %s, uint32_t);' % (
+        code = [ 'int %s(struct %s *, const %s, ev_uint32_t);' % (
             funcname, self._struct.Name(), self._ctype ) ]
         return code
         
@@ -930,7 +930,7 @@ class EntryVarBytes(Entry):
         name = self._name
         code = [ 'int',
                  '%s_%s_assign(struct %s *msg, '
-                 'const %s value, uint32_t len)' % (
+                 'const %s value, ev_uint32_t len)' % (
             self._struct.Name(), name,
             self._struct.Name(), self._ctype),
                  '{',
@@ -949,7 +949,7 @@ class EntryVarBytes(Entry):
     def CodeGet(self):
         name = self._name
         code = [ 'int',
-                 '%s_%s_get(struct %s *msg, %s *value, uint32_t *plen)' % (
+                 '%s_%s_get(struct %s *msg, %s *value, ev_uint32_t *plen)' % (
             self._struct.Name(), name,
             self._struct.Name(), self._ctype),
                  '{',
@@ -1010,8 +1010,8 @@ class EntryVarBytes(Entry):
         return code
 
     def Declaration(self):
-        dcl  = ['uint8_t *%s_data;' % self._name,
-                'uint32_t %s_length;' % self._name]
+        dcl  = ['ev_uint8_t *%s_data;' % self._name,
+                'ev_uint32_t %s_length;' % self._name]
 
         return dcl
 
